k8s/01-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-server
  namespace: iot-topology
  labels:
    app: iot-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-server
  template:
    metadata:
      labels:
        app: iot-server
    spec:
      containers:
      - name: server
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "server.js"]
        args:
          - "--local_ip=0.0.0.0"
          - "--local_port=8080"
          - "--local_name=srv"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: iot-server
  namespace: iot-topology
spec:
  selector:
    app: iot-server
  ports:
    - port: 8080
      targetPort: 8080
