k8s/03-gateway-final-zone1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-gateway-final-1
  namespace: iot-topology
  labels:
    app: iot-gateway-final
    zone: zone-1
    gateway-id: gf1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-gateway-final
      zone: zone-1
  template:
    metadata:
      labels:
        app: iot-gateway-final
        zone: zone-1
        gateway-id: gf1
    spec:
      containers:
      - name: gateway
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "gateway.js"]
        args:
          - "--local_ip=0.0.0.0"
          - "--local_port=8281"
          - "--local_name=gwf1"
          - "--remote_ip=iot-gateway-inter-1"
          - "--remote_port=8181"
          - "--remote_name=gwi1"
        ports:
        - containerPort: 8281
---
apiVersion: v1
kind: Service
metadata:
  name: iot-gateway-final-1
  namespace: iot-topology
spec:
  selector:
    gateway-id: gf1
  ports:
    - port: 8281
      targetPort: 8281
      protocol: TCP
  type: ClusterIP
