k8s/03-gateway-final-zone2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-gateway-final-2
  namespace: iot-topology
  labels:
    app: iot-gateway-final
    zone: zone-2
    gateway-id: gf2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-gateway-final
      zone: zone-2
  template:
    metadata:
      labels:
        app: iot-gateway-final
        zone: zone-2
        gateway-id: gf2
    spec:
      containers:
      - name: gateway
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "gateway.js"]
        args:
          - "--local_ip=0.0.0.0"
          - "--local_port=8282"
          - "--local_name=gwf2"
          - "--remote_ip=iot-gateway-inter-1"
          - "--remote_port=8181"
          - "--remote_name=gwi1"
        ports:
        - containerPort: 8282
---
apiVersion: v1
kind: Service
metadata:
  name: iot-gateway-final-2
  namespace: iot-topology
spec:
  selector:
    gateway-id: gf2
  ports:
    - port: 8282
      targetPort: 8282
      protocol: TCP
  type: ClusterIP
