k8s/03-gateway-final.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-gateway-final
  namespace: iot-topology
  labels:
    app: iot-gateway-final
    zone: zone-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-gateway-final
  template:
    metadata:
      labels:
        app: iot-gateway-final
        zone: zone-1
    spec:
      containers:
      - name: gateway
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "gateway.js"]
        args:
          - "--local_ip=0.0.0.0"
          - "--local_port=8282"
          - "--local_name=gwf1"
          - "--remote_ip=iot-gateway-inter"
          - "--remote_port=8181"
          - "--remote_name=gwi"
        ports:
        - containerPort: 8282
---
apiVersion: v1
kind: Service
metadata:
  name: iot-gateway-final
  namespace: iot-topology
spec:
  selector:
    app: iot-gateway-final
  ports:
    - port: 8282
      targetPort: 8282
