k8s/04-device.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-device-headless
  namespace: iot-topology
spec:
  clusterIP: None
  selector:
    app: iot-device
  ports:
    - port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iot-device
  namespace: iot-topology
  labels:
    app: iot-device
    zone: zone-1
spec:
  serviceName: iot-device-headless
  replicas: 3
  selector:
    matchLabels:
      app: iot-device
  template:
    metadata:
      labels:
        app: iot-device
        zone: zone-1
    spec:
      containers:
      - name: device
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "device.js"]
        args:
          - "--local_ip=0.0.0.0"
          - "--local_port=9001"
          - "--local_name=$(DEVICE_ID)"
          - "--remote_ip=iot-gateway-final"
          - "--remote_port=8282"
          - "--remote_name=gwf1"
          - "--send_period=3000"
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: iot-device
  namespace: iot-topology
spec:
  selector:
    app: iot-device
  ports:
    - port: 9001
      targetPort: 9001
