k8s/05-application-zone2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-application-zone2
  namespace: iot-topology
  labels:
    app: iot-application
    zone: zone-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-application
      zone: zone-2
  template:
    metadata:
      labels:
        app: iot-application
        zone: zone-2
    spec:
      containers:
      - name: application
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "application.js"]
        args:
          - "--remote_ip=iot-server"     # ← POINTE VERS SERVER
          - "--remote_port=8080"
          - "--device_name=device-gf2-1" 
          - "--send_period=5000"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: iot-application-zone2
  namespace: iot-topology
spec:
  selector:
    app: iot-application
    zone: zone-2
  ports:
    - port: 8081
      targetPort: 8081
