k8s/05-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-application
  namespace: iot-topology
  labels:
    app: iot-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-application
  template:
    metadata:
      labels:
        app: iot-application
    spec:
      containers:
      - name: application
        image: iot-topology:latest
        imagePullPolicy: Never
        command: ["node", "application.js"]
        args:
          - "--remote_ip=iot-server"
          - "--remote_port=8080"
          - "--device_name=iot-device-0"
          - "--send_period=5000"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: iot-application
  namespace: iot-topology
spec:
  selector:
    app: iot-application
  ports:
    - port: 8081
      targetPort: 8081
